<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".option_two.fragment.SelectTimeFragment">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_hour"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mTvFragmentHour"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="#666863" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_time"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="#666863" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/of"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="#666863" />
            <TextView
                android:id="@+id/mTvFragmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="#666863" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <ImageView
                android:id="@+id/payment"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_payment_method"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/payment_method" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_toEndOf="@id/payment"
                android:text="@string/payment_method"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"/>

            <LinearLayout
                android:layout_toStartOf="@+id/arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Km Drive"
                    android:textColor="@color/progress_gray_dark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123456788"
                    android:textColor="@color/gray_dark" />
            </LinearLayout>
            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right_arrow"
                android:layout_centerInParent="true"
                android:contentDescription="@string/go" />

        </RelativeLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ederdev.padilla.driveoptionviews.view.SeekArc
                android:id="@+id/mSeekAcrFragment"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:padding="25dp"
                seekarc:arcColor="#0063A7"
                seekarc:arcWidth="6dp"
                seekarc:clockwise="true"
                seekarc:max="48"
                seekarc:progressColor="@color/bbva"
                seekarc:progressWidth="8dp"
                seekarc:rotation="0"
                seekarc:sweepAngle="360"
                seekarc:thumb="@drawable/thumbnail"
                seekarc:touchInside="true" />
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="40dp"
                    android:rotation="-10"
                    android:contentDescription="@string/roll_right_arrow_des"
                    android:src="@mipmap/arrow_1" />
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="20dp"
                    android:rotation="-14"
                    android:layout_gravity="center|start"
                    android:contentDescription="@string/roll_right_arrow_des"
                    android:src="@mipmap/arrow_2" />
            </LinearLayout>
            <ImageView
                android:id="@+id/mImgFragmentPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/plus"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/add_coin" />
            <RelativeLayout
                android:id="@+id/mImgFragmentSubstract"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/substract_coin"
                    android:src="@mipmap/minus" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/progress_gray_dark"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/mTvFragmentAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_dark"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:padding="0dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charge_for_commission"
                    android:textSize="8sp" />
            </LinearLayout>


        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum_amount"
            android:textSize="12sp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#666863" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/accept_pay"/>
    </LinearLayout>

</LinearLayout>